--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,16 @@ services:
       - POSTGRES_PASSWORD=S3cretn0
       - POSTGRES_USER=synaptix_admin
       - POSTGRES_DB=synaptix_db
+
+  backend:
+    build: .
+    restart: always
+    env_file:
+      - ./.env
+    ports:
+      - "8000:80"
+    depends_on:
+      - postgres
+
+  nginx:
+    build: ./nginx/
