--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "axios": "^0.24.0",
+    "draft-js": "^0.11.7",
     "js-cookie": "^3.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.0.1",
