For testing purposes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,12 @@ services:
   backend:
     build: .
     restart: always
-    env_file:
-      - ./.env
     ports:
-      - "8000:80"
+      - 8000:8000
     depends_on:
       - postgres
 
   nginx:
     build: ./nginx/
+    ports:
+      -  80:80
